tests/valid/v02_weekly_task.tsl
# VALID TEST 2: Weekly scheduled task
# Tests: EVERY WEEK ON <weekday> AT schedule

TASK weeklyCleanup {
    RUN "cleanup.sh"
    EVERY WEEK ON SUNDAY AT 03:00
}
